--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -10,16 +10,17 @@
     <link rel="stylesheet" href="css/styles-partials.css" />
 
     <title>Signode Canada</title>
+    
 </head>
-
+<!-- dwad -->
 <body>
     <!-- ******************************* NAVIGATION BAR TWO ************************************** -->
                 
     <nav class="navbar navbar-expand-lg navbar-dark ml-auto sticky-top" id="navbar-two-custom"> 
         <div class="container">
             <!-- logo -->
-            <a class="navbar-brand" id="hide-brand-logo">
-                <img src="images/partials/signode-logo.png" alt="" width="180" />
+            <a class="navbar-brand" id="hide-brand-logo" href="index.html" >
+                <img src="images/partials/signode-logo.png" alt="" width="180"/>
             </a>
     
             <!-- responsive navigation menu -->
@@ -30,88 +31,213 @@
             <!-- navbar items -->
             <div class="collapse navbar-collapse ml-auto justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto mb-2 mb-lg-0" id="hide-navbar-items">
-                    <li class="nav-item px-2">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
     
+                    <!-- navbar item -->
                     <li class="nav-item dropdown px-2">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Company </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                            <!-- dropdown menu item -->
                             <li>
                                 <a class="dropdown-item" href="about.html">About Us</a>
                             </li>
+
+                            <!-- dropdown menu item -->
                             <li>
                                 <a class="dropdown-item" href="brands.html">Brands</a>
                             </li>
-                            <li>
-                                <!-- <hr class="dropdown-divider" /> -->
-                            </li>
+
+                            <!-- dropdown menu item -->
                             <li>
                                 <a class="dropdown-item" href="careers.html">Careers</a>
                             </li>
                         </ul>
                     </li>
     
+                    <!-- navbar item -->
                     <li class="nav-item dropdown px-2">
-                        <a class="nav-link active" aria-current="page" href="industries.html">Industries</a>
-                    </li>
-    
-                    <li class="nav-item dropdown px-2">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Products </a>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Industries </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                            <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="about.html">Metals</a>
                             </li>
+
+                            <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="brands.html">Corrugated & Paper</a>
                             </li>
-                            <li><hr class="dropdown-divider" /></li>
+
+                            <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="#">Something else here</a>
+                                <a class="dropdown-item" href="careers.html">Empty Container</a>
+                            </li>
+
+                            <!-- dropdown menu item -->
+                            <li>
+                                <a class="dropdown-item" href="about.html">Pharma</a>
+                            </li>
+
+                            <!-- dropdown menu item -->
+                            <li>
+                                <a class="dropdown-item" href="brands.html">Food</a>
+                            </li>
+
+                            <!-- dropdown menu item -->
+                            <li>
+                                <a class="dropdown-item" href="careers.html">Beverage</a>
+                            </li>
+
+                            <!-- dropdown menu item -->
+                            <li>
+                                <a class="dropdown-item" href="about.html">Fiber & Textile</a>
+                            </li>
+
+                            <!-- dropdown menu item -->
+                            <li>
+                                <a class="dropdown-item" href="brands.html">Construction</a>
+                            </li>
+
+                            <!-- dropdown menu item -->
+                            <li>
+                                <a class="dropdown-item" href="careers.html">Wood Products</a>
+                            </li>
+
+                            <!-- dropdown menu item -->
+                            <li>
+                                <a class="dropdown-item" href="careers.html">Printing & Mail</a>
+                            </li>
+
+                            <!-- dropdown menu item -->
+                            <li>
+                                <a class="dropdown-item" href="about.html">Distribution</a>
+                            </li>
+
+                            <!-- dropdown menu item -->
+                            <li>
+                                <a class="dropdown-item" href="brands.html">Bagged Products</a>
+                            </li>
+
+                            <!-- dropdown menu item -->
+                            <li>
+                                <a class="dropdown-item" href="careers.html">General Manufacturing <br> & Engineering</a>
                             </li>
                         </ul>
                     </li>
     
-                    <li class="nav-item dropdown px-2">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Solutions </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li>
-                                <a class="dropdown-item" href="#">Action</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Another action</a>
-                            </li>
-                            <li><hr class="dropdown-divider" /></li>
-                            <li>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </li>
-                        </ul>
+                   <!-- navbar item -->
+                   <li class="nav-item dropdown px-2">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Products </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="about.html">Case Packaging</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="brands.html">Protective</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="careers.html">Stapling Systems</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="about.html">Strapping Systems</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="brands.html">Stretch Systems</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="careers.html">Warehouse Automation</a>
+                        </li>
+
+                    </ul>
+                </li>
+
+                <!-- navbar item -->
+                <li class="nav-item dropdown px-2">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Solutions </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="about.html">Pack</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="brands.html">Bundle</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="careers.html">Unitize</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="about.html">Warehouse</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="brands.html">Transport</a>
+                        </li>
+
+                    </ul>
+                </li>
+
+                    <li class="nav-item px-2">
+                        <a class="nav-link active hover-border" aria-current="page" href="#">Services</a>
+                    </li>
+
+                    <li class="nav-item px-2">
+                        <a class="nav-link active hover-border" aria-current="page" href="#">Automation</a>
                     </li>
     
                     <li class="nav-item px-2">
-                        <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                        <a class="nav-link active hover-border" aria-current="page" href="contact.html">Contact</a>
                     </li>
       
                 </ul>
-    
-    <!-- search bar: desktop version -->
-    <div id="search-box-desktop" >
-      <form class="d-flex align-items-center" autocomplete="off">
-        <!-- expandable input box -->
-        <input id="search-input" type="text" placeholder="What are you looking for?" onfocus="navSearchFocus()" onblur="navSearchBlur()">
-        <!-- search icon -->
-        <input id="search-submit">
-      </form>
+
+            <!-- search bar: desktop version -->
+            <div id="search-box-desktop" >
+            <form class="d-flex align-items-center" autocomplete="off">
+                <!-- expandable input box -->
+                <input id="search-input" type="text" placeholder="What are you looking for?" onfocus="navSearchFocus()" onblur="navSearchBlur()">
+                <!-- search icon -->
+                <input id="search-submit">
+            </form>
+            </div>
+
+            <!-- search bar: mobile version -->
+            <div id="search-box-mobile">
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="What are you looking for?" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+
+        </div>
+
     </div>
-
-</div>
-
-</div>
 </nav>
 
 <!-- ******************************* JAVASCRIPT ************************************** -->
 
 <!-- Bootstrap JavaScript -->
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 </body>
