fixed javascript for partials, navbar toggler

--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -12,7 +12,7 @@
     <title>Signode Canada</title>
     
 </head>
-<!-- dwad -->
+
 <body>
     <!-- ******************************* NAVIGATION BAR TWO ************************************** -->
                 
@@ -24,7 +24,7 @@
             </a>
     
             <!-- responsive navigation menu -->
-            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
     
@@ -34,7 +34,7 @@
     
                     <!-- navbar item -->
                     <li class="nav-item dropdown px-2">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Company </a>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Company </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                             <!-- dropdown menu item -->
@@ -56,7 +56,7 @@
     
                     <!-- navbar item -->
                     <li class="nav-item dropdown px-2">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Industries </a>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Industries </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                             <!-- dropdown menu item -->
@@ -128,7 +128,7 @@
     
                    <!-- navbar item -->
                    <li class="nav-item dropdown px-2">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Products </a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Products </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                         <!-- dropdown menu item -->
@@ -166,7 +166,7 @@
 
                 <!-- navbar item -->
                 <li class="nav-item dropdown px-2">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Solutions </a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Solutions </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                         <!-- dropdown menu item -->
@@ -236,9 +236,7 @@
 
 <!-- ******************************* JAVASCRIPT ************************************** -->
 
-<!-- Bootstrap JavaScript -->
-<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+<script src="js/search-bar.js"></script>
 
 </body>
 </html>
