--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark ml-auto sticky-top" id="navbar-two-custom"> 
         <div class="container">
             <!-- logo -->
-            <a class="navbar-brand" id="hide-brand-logo" href="index.html" >
+            <a class="navbar-brand pr-4" id="hide-brand-logo" href="index.html" >
                 <img src="images/partials/signode-logo.png" alt="" width="180"/>
             </a>
     
@@ -33,7 +33,7 @@
                 <ul class="navbar-nav ml-auto mb-2 mb-lg-0" id="hide-navbar-items">
     
                     <!-- navbar item -->
-                    <li class="nav-item dropdown px-2">
+                    <li class="nav-item dropdown pr-4">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Company </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
@@ -55,7 +55,7 @@
                     </li>
     
                     <!-- navbar item -->
-                    <li class="nav-item dropdown px-2">
+                    <li class="nav-item dropdown pr-4">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Industries </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
@@ -127,7 +127,7 @@
                     </li>
     
                    <!-- navbar item -->
-                   <li class="nav-item dropdown px-2">
+                   <li class="nav-item dropdown pr-4">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Products </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
@@ -165,7 +165,7 @@
                 </li>
 
                 <!-- navbar item -->
-                <li class="nav-item dropdown px-2">
+                <li class="nav-item dropdown pr-4">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Solutions </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
@@ -197,19 +197,21 @@
                     </ul>
                 </li>
 
-                    <li class="nav-item px-2">
+                    <li class="nav-item pr-4">
                         <a class="nav-link active hover-border" aria-current="page" href="#">Services</a>
                     </li>
 
-                    <li class="nav-item px-2">
+                    <li class="nav-item pr-4">
                         <a class="nav-link active hover-border" aria-current="page" href="#">Automation</a>
                     </li>
     
-                    <li class="nav-item px-2">
+                    <li class="nav-item pr-4">
                         <a class="nav-link active hover-border" aria-current="page" href="contact.html">Contact</a>
                     </li>
       
                 </ul>
+
+            <!-- ******************************* SEARCH BOXES ************************************** -->
 
             <!-- search bar: desktop version -->
             <div id="search-box-desktop" >
@@ -228,6 +230,8 @@
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
+
+            
 
         </div>
 
