--- a/css/styles-home-page.css
+++ b/css/styles-home-page.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wdth,wght@75,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@400;500;600;700&display=swap');
 
 /**************************************** GLOBAL *********************************************/
 
@@ -143,6 +144,47 @@ h1 span {
 	border-radius: rounded;
 }
 
+
+/************************************ SOLUTIONS *************************************/
+
+#solutions-section{
+	background-image: url("../images/home-page/solutions-background.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	padding-top: 20px;
+	padding-bottom: 80px;
+}
+
+#solutions-section .sub-heading{
+	color: white;
+}
+
+#solutions-section .main-heading{
+	color: var(--clr-signode-red);
+}
+
+#solutions-section .process-icon{
+	font-size: 15px;
+	padding-bottom: 5px;
+	width: 100px;
+}
+
+#solutions-section h3 b{
+	color: var(--clr-signode-red);
+	font-family: "Zilla Slab";
+	font-size: 23px;
+}
+
+#solutions-section p{
+	margin-bottom: 30px;
+
+	color: white;
+	font-size: 15px;
+	font-weight: 400;
+}
+
 /************************************ INDUSTRIES *************************************/
 
 .gallery-text {
@@ -176,6 +218,24 @@ h1 span {
 
 /************************************ TESTIMONIALS *************************************/
 
+
+/* testimonials background */
+#carouselExampleIndicators .carousel-item{
+	width: 100%;
+	height: 400px;
+}
+
+#carouselExampleIndicators .carousel-item .row{
+	height: 300px;
+}
+
+/* testimonial columns */
+#carouselExampleIndicators .carousel-item .col{
+	width: 100%;
+	margin: 10px;
+	color: black;
+}
+
 /* styling arrows */
 #carouselExampleIndicators .carousel-control-prev .fa-chevron-left{
 	font-size: 30px;
@@ -192,18 +252,70 @@ h1 span {
 	background-color: black;
 }
 
-#carouselExampleIndicators .carousel-item{
-	width: 100%;
-	height: 400px;
-	background-color: rgb(255, 202, 202);
-	border: 1px solid black;
+/* styling quotations */
+#carouselExampleIndicators .fa-solid.fa-quote-left{
+	font-size: 40px;
+	padding-bottom: 15px;
 }
 
-#carouselExampleIndicators .carousel-item .col{
-	width: 100%;
-	height: 300px;
-	border: 1px solid black;
-	margin: 10px;
-	color: black;
+/* customer review */
+#carouselExampleIndicators #testimonial-text{
+	font-size: 19px;
+	padding-bottom: 5px;
 }
 
+/* name */
+#carouselExampleIndicators #testimonial-source .name{
+	font-size: 20px;
+}
+
+/* company */
+#carouselExampleIndicators #testimonial-source .company{
+	font-size: 15px;
+	font-weight: 500;
+	color: var(--clr-signode-red);
+}
+
+/* RESPONSIVE SIZING */
+
+/* @media screen and (min-width: 1200px) {
+	.testimonials-xl{
+		display: "";
+	}
+
+	.testimonials-lg{
+		display: none;
+	}
+
+	.testimonials-md{
+		display: none;
+	}
+}
+
+@media screen and (max-width: 992px) and (min-width: 1200px) {
+	.testimonials-xl{
+		display: none;
+	}
+
+	.testimonials-lg{
+		display: "";
+	}
+
+	.testimonials-md{
+		display: none;
+	}
+}
+
+@media screen and (max-width: 992px) {
+	.testimonials-xl{
+		display: none;
+	}
+
+	.testimonials-lg{
+		display: none;
+	}
+
+	.testimonials-md{
+		display: "";
+	}
+} */
