--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -34,7 +34,11 @@
     
                     <!-- navbar item -->
                     <li class="nav-item dropdown pr-4">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Company </a>
+
+                        <!-- to hold dropdown menu open when clicking a navlink: -->
+                        <!-- <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Company </a> -->
+
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" aria-expanded="false"> Company </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                             <!-- dropdown menu item -->
@@ -56,7 +60,7 @@
     
                     <!-- navbar item -->
                     <li class="nav-item dropdown pr-4">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Industries </a>
+                        <a class="nav-link dropdown-toggle" href="industries.html" id="navbarDropdown" role="button" aria-expanded="false"> Industries </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                             <!-- dropdown menu item -->
@@ -128,7 +132,7 @@
     
                    <!-- navbar item -->
                    <li class="nav-item dropdown pr-4">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Products </a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" aria-expanded="false"> Products </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                         <!-- dropdown menu item -->
@@ -166,7 +170,7 @@
 
                 <!-- navbar item -->
                 <li class="nav-item dropdown pr-4">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Solutions </a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" aria-expanded="false"> Solutions </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                         <!-- dropdown menu item -->
