--- a/css/styles-about-page.css
+++ b/css/styles-about-page.css
@@ -85,11 +85,12 @@
 	color: var(--clr-signode-red);
 }
 
-#values-section i{
-	color: var(--clr-signode-red);
-	font-size: 30px;
+#values-section .values-icons{
+	width: 60px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	margin-left: -20;
+	transform: translate(-10px);
 }
 
 #values-section h3{
