--- a/css/styles-home-page.css
+++ b/css/styles-home-page.css
@@ -226,12 +226,10 @@ h1 span {
 
 #stats {
 	background: var(--clr-signode-red);
+	padding-top: 100px;
+	padding-bottom: 100px;
 }
 
-#stats .col-12, .col-md {
-	margin-top: 100px;
-	margin-bottom: 100px;
-}
 
 #stats .stats-heading {
 	font-size: 50px;
@@ -320,6 +318,12 @@ h1 span {
 	font-weight: 500;
 	color: var(--clr-signode-red);
 }
+
+/* @media screen and (min-width: 1200px) {
+	#carouselExampleIndicators{
+		display: "";
+	}
+} */
 
 /* RESPONSIVE SIZING */
 
