finished product details page template

--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -70,7 +70,7 @@
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="brands.html">Corrugated & Paper</a>
+                                <a class="dropdown-item" href="specific-products.html">Corrugated & Paper</a>
                             </li>
 
                             <!-- dropdown menu item -->
@@ -202,11 +202,11 @@
                 </li>
 
                     <li class="nav-item pr-4">
-                        <a class="nav-link active hover-border" aria-current="page" href="#">Services</a>
+                        <a class="nav-link active hover-border" aria-current="page" href="services.html">Services</a>
                     </li>
 
                     <li class="nav-item pr-4">
-                        <a class="nav-link active hover-border" aria-current="page" href="#">Automation</a>
+                        <a class="nav-link active hover-border" aria-current="page" href="automation.html">Automation</a>
                     </li>
     
                     <li class="nav-item pr-4">
