services page progress

--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -38,7 +38,7 @@
                         <!-- to hold dropdown menu open when clicking a navlink: -->
                         <!-- <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Company </a> -->
 
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" aria-expanded="false"> Company </a>
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" aria-expanded="false"> Company </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                             <!-- dropdown menu item -->
