--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -65,27 +65,27 @@
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="about.html">Metals</a>
+                                <a class="dropdown-item" href="metals.html">Metals</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="specific-products.html">Corrugated & Paper</a>
+                                <a class="dropdown-item" href="paper.html">Corrugated & Paper</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="careers.html">Empty Container</a>
+                                <a class="dropdown-item" href="empty-container.html">Empty Container</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="about.html">Pharma</a>
+                                <a class="dropdown-item" href="pharma.html">Pharma</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="brands.html">Food</a>
+                                <a class="dropdown-item" href="food.html">Food</a>
                             </li>
 
                             <!-- dropdown menu item -->
